(fix): overflow-x on section

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@
 */
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
